--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-  "name": "teststyleguide",
+  "name": "base-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
+  "author": "Tom Hopkins",
   "license": "ISC",
   "devDependencies": {
-    "component-styleguide": "",
-    "babel-preset-es2015": "",
-    "babelify": "",
-    "grunt": "",
-    "grunt-concurrent": "",
-    "grunt-contrib-less": "",
-    "grunt-contrib-uglify": "",
-    "grunt-contrib-watch": "",
-    "grunt-browserify": "",
-    "grunt-nodemon": "",
-    "grunt-eslint": "",
-    "grunt-extract-sourcemap": "",
-    "load-grunt-tasks": "",
-    "open": ""
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.2.0",
+    "chalk": "^1.1.3",
+    "component-styleguide": "^1.4.0",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^2.0.0",
+    "gulp-less": "^3.0.5",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
+    "less-plugin-clean-css": "^1.5.1",
+    "merge-stream": "^1.0.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   }
 }
