--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "babelify": "^7.2.0",
     "chalk": "^1.1.3",
     "component-styleguide": "^1.4.0",
+    "doiuse": "^2.3.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
     "gulp-less": "^3.0.5",
     "gulp-nodemon": "^2.0.6",
+    "gulp-postcss": "^6.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
+    "gulp-watch": "^4.3.5",
     "less-plugin-clean-css": "^1.5.1",
     "merge-stream": "^1.0.0",
     "open": "0.0.5",
+    "postcss-less": "^0.10.0",
+    "postcss-reporter": "^1.3.3",
+    "stylelint": "^6.2.2",
+    "stylelint-config-standard": "^6.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
