--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-transform-es2015-spread": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
+    "browser-sync": "^2.13.0",
     "chalk": "^1.1.3",
     "component-styleguide": "^1.4.0",
     "doiuse": "^2.3.0",
@@ -15,6 +16,7 @@
     "gulp-eslint": "^2.0.0",
     "gulp-less": "^3.0.5",
     "gulp-nodemon": "^2.0.6",
+    "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
